--- a/Lesson6/Task4/selectors.css
+++ b/Lesson6/Task4/selectors.css
@@ -1,17 +1,17 @@
-section.already-learned > ol {
+section.already-learned > ol li {
   color: white;
   background-color: green;
 }
-section.to-be-learned > ol {
+section.to-be-learned > ol li {
   color: green;
   background-color: orange;
 }
 
-section.already-learned > ol li code {
+section.already-learned > ol code {
   background-color: orange;
 }
 
-section.to-be-learned > ol li code {
+section.to-be-learned > ol code {
   background-color: green;
 }
 h4 > code {
