--- a/Lesson6/Task4/selectors.css
+++ b/Lesson6/Task4/selectors.css
@@ -1,8 +1,8 @@
-section.already-learned > ol li {
+section.already-learned > ol {
   color: white;
   background-color: green;
 }
-section.to-be-learned > ol li {
+section.to-be-learned > ol {
   color: green;
   background-color: orange;
 }
@@ -14,7 +14,7 @@ section.already-learned > ol code {
 section.to-be-learned > ol code {
   background-color: green;
 }
-h4 > code {
+li h4 code {
   border: 2px solid blue;
 }
 #special2 ~ li {
