--- a/Lesson6/Task4/selectors.css
+++ b/Lesson6/Task4/selectors.css
@@ -14,7 +14,7 @@ section.already-learned > ol code {
 section.to-be-learned > ol code {
   background-color: green;
 }
-li h4 code {
+#special1 ~ li h4 code {
   border: 2px solid blue;
 }
 #special2 ~ li {
