--- a/Lesson9/Task1/styles.css
+++ b/Lesson9/Task1/styles.css
@@ -45,8 +45,8 @@ div {
 }
 .relative-parent {
   position: relative;
-  padding-top: 20px;
-  padding-left: 50px;
+  margin-top: 20px;
+  margin-left: 50px;
 }
 .absolute-parent {
   position: absolute;
