--- a/Lesson9/Task1/styles.css
+++ b/Lesson9/Task1/styles.css
@@ -50,11 +50,13 @@ div {
 }
 .absolute-parent {
   position: absolute;
-  margin-right: 50px;
-  margin-bottom: 20px;
+  margin-left: 50px;
+  margin-right: 20px;
+  clear: both;
 }
 .fixed-parent {
   position: fixed;
   margin-left: 30px;
   margin-bottom: 20px;
+  clear: both;
 }
