--- a/Lesson9/Task1/styles.css
+++ b/Lesson9/Task1/styles.css
@@ -51,12 +51,10 @@ div {
 .absolute-parent {
   position: absolute;
   margin-left: 50px;
-  margin-right: 20px;
-  clear: both;
+  margin-bottom: 20px;
 }
 .fixed-parent {
   position: fixed;
-  margin-left: 30px;
-  margin-bottom: 20px;
-  clear: both;
+  left: 30px;
+  bottom: 20px;
 }
