--- a/Lesson9/Task1/styles.css
+++ b/Lesson9/Task1/styles.css
@@ -50,8 +50,8 @@ div {
 }
 .absolute-parent {
   position: absolute;
-  margin-left: 50px;
-  margin-bottom: 20px;
+  right: 50px;
+  bottom: 20px;
 }
 .fixed-parent {
   position: fixed;
