--- a/Lesson9/Task3/styles.css
+++ b/Lesson9/Task3/styles.css
@@ -1,21 +1,26 @@
 .size {
   box-sizing: border-box;
   height: 200px;
-  width: 205px;
-  float: left;
+  position: relative;
+  width: 203px;
 }
 .block_red {
   background-color: red;
+  float: left;
 }
 .block_green {
   background-color: green;
+  float: left;
 }
 .block_blue {
   background-color: blue;
+  float: left;
 }
 .block_yellow {
   background-color: yellow;
+  float: left;
 }
 .block_black {
   background-color: black;
+  float: left;
 }
