--- a/Lesson9/Task3/styles.css
+++ b/Lesson9/Task3/styles.css
@@ -2,29 +2,25 @@
   box-sizing: border-box;
   height: 200px;
   /* position: relative; */
+  width: 20%;
 }
 .block_red {
   background-color: red;
   float: left;
-  width: 204px;
 }
 .block_green {
   background-color: green;
   float: left;
-  width: 205px;
 }
 .block_blue {
   background-color: blue;
   float: left;
-  width: 205px;
 }
 .block_yellow {
   background-color: yellow;
   float: left;
-  width: 204px;
 }
 .block_black {
   background-color: black;
   float: left;
-  width: 204px;
 }
