--- a/Lesson9/Task4/styles.css
+++ b/Lesson9/Task4/styles.css
@@ -1,8 +1,8 @@
-header {
+.header {
   height: 50px;
   background: yellow;
 }
-main {
+.content {
   position: relative;
   height: 500px;
   float: left;
@@ -15,7 +15,7 @@ main {
   width: 20%;
   background: grey;
 }
-footer {
+.footer {
   height: 50px;
   background: green;
   clear: both;
