--- a/Lesson9/Task5/styles.css
+++ b/Lesson9/Task5/styles.css
@@ -25,8 +25,8 @@
   width: 200px;
   height: 200px;
   background: aquamarine;
-  margin-top: calc(50%);
-  margin-left: calc(50% - 100px);
+  margin-top: calc(50% - 200px);
+  margin-left: calc(50% - 200px);
 }
 .ear {
   width: 40px;
