--- a/Lesson9/Task5/styles.css
+++ b/Lesson9/Task5/styles.css
@@ -1,16 +1,19 @@
 .header {
-  height: 40px;
+  /* height: 40px; */
   background: darkturquoise;
   position: fixed;
   width: 100%;
 }
-
+.nav-list {
+  color: white;
+  height: 40px;
+}
 .navigation .nav-item {
   float: left;
-  margin-left: 16px;
-  color: white;
+  list-style-type: none;
   line-height: 50%;
   list-style-type: none;
+  margin-left: 16px;
 }
 .content {
   height: 5000px;
