--- a/Lesson9/Task5/styles.css
+++ b/Lesson9/Task5/styles.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 .header {
   height: 40px;
   background: darkturquoise;
@@ -8,9 +12,8 @@
   color: white;
 }
 .nav-item {
-  height: 40px;
   float: left;
-  line-height: 50%;
+  line-height: 36px;
   list-style-type: none;
   margin-left: 16px;
 }
