--- a/Lesson9/Task5/styles.css
+++ b/Lesson9/Task5/styles.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
 }
 .header {
   height: 40px;
@@ -13,7 +13,7 @@
 }
 .nav-item {
   float: left;
-  line-height: 36px;
+  line-height: 40px;
   list-style-type: none;
   margin-left: 16px;
 }
