--- a/Lesson10/Task3/style.css
+++ b/Lesson10/Task3/style.css
@@ -17,7 +17,8 @@
   flex-wrap: wrap;
 }
 .nav_list {
-  margin: 8px;
+  display: flex;
+  align-items: center;
   height: 40px;
   list-style-type: none;
   flex-shrink: 0;
@@ -27,17 +28,15 @@
 } */
 .main {
   display: flex;
-  background-color: pink;
   flex-grow: 1;
 }
 
 .content {
   display: flex;
-  flex-wrap: wrap;
-  margin: auto;
+  background-color: pink;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
-  flex-shrink: 1;
 }
 
 .sidebar {
