--- a/Lesson10/Task3/style.css
+++ b/Lesson10/Task3/style.css
@@ -46,13 +46,12 @@
 
 .news {
   margin-top: 16px;
+  margin-bottom: 16px;
   display: flex;
   justify-content: center;
 }
-ul {
+.text {
   padding: 0px;
-  /* height: 40px; */
-  margin-top: 16px;
 }
 .news_list {
   list-style-type: none;
