--- a/Lesson10/Task3/style.css
+++ b/Lesson10/Task3/style.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin-top: 0px;
   margin-bottom: 0px;
+  padding: 0px;
 }
 .page {
   display: flex;
@@ -46,7 +47,7 @@
 
 .news {
   margin-top: 16px;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
   display: flex;
   justify-content: center;
 }
