--- a/Lesson10/Task5/style.css
+++ b/Lesson10/Task5/style.css
@@ -8,12 +8,13 @@ header {
 }
 .articles-list {
   display: flex;
-  flex-grow: 1;
-  flex-shrink: 1;
+  flex-wrap: wrap;
 }
 .article {
   background-color: bisque;
   margin: 8px;
   padding: 16px;
-  min-width: 300px;
+  width: 300px;
+  flex-shrink: 0;
+  flex-grow: 1;
 }
