--- a/Lesson10/Task5/style.css
+++ b/Lesson10/Task5/style.css
@@ -14,7 +14,7 @@ header {
   background-color: bisque;
   margin: 8px;
   padding: 16px;
-  width: 300px;
+  flex-basis: 300px;
   flex-shrink: 0;
   flex-grow: 1;
 }
