--- a/Lesson11/Task2/styles.css
+++ b/Lesson11/Task2/styles.css
@@ -13,8 +13,10 @@ div {
   overflow: hidden;
 }
 .both-scrolls {
+  cursor: all-scroll;
   overflow: scroll;
 }
 .vertical-scroll {
+  cursor: all-scroll;
   overflow-y: auto;
 }
