--- a/Lesson11/Task3/styles.css
+++ b/Lesson11/Task3/styles.css
@@ -14,6 +14,7 @@ body {
 }
 .menu-button:hover {
   background-color: darkgreen;
+  padding: 16px;
   font-size: 16px;
   color: white;
   opacity: 1;
@@ -22,7 +23,7 @@ body {
 .menu-list {
   display: none;
   position: absolute;
-  background-color: darkgreen;
+  background-color: ghostwhite;
   padding: 0;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -36,7 +37,4 @@ body {
 .menu-item {
   list-style-type: none;
   padding: 16px;
-}
-.menu-item:hover {
-  background-color: ghostwhite;
 }
