--- a/Lesson11/Task3/styles.css
+++ b/Lesson11/Task3/styles.css
@@ -17,6 +17,7 @@ body {
 }
 .menu-button:hover {
   display: inline-block;
+  height: 34px;
   background-color: darkgreen;
   padding: 16px;
   font-size: 16px;
