--- a/Lesson11/Task3/styles.css
+++ b/Lesson11/Task3/styles.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   box-sizing: border-box;
 }
 .dropdown {
@@ -44,41 +44,4 @@
 .menu-item {
   list-style-type: none;
   padding: 16px;
-} */
- background-color: darkgreen;
-  color: white;
-  display: inline-block;
-  margin: 16px;
-  padding: 8px;
-  opacity: 0.8;
-  font-size: 16px;
-  padding: 16px;
-  cursor: pointer;
-}
-
-.menu-list {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  padding: 0;
-  display: none;
-  margin: 0;
-  background-color: lightcyan;
-  color: black;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  list-style: none;
-  z-index: 1;
-  min-width: 120px;
-}
-
-.menu-item {
-  padding: 16px;
-}
-
-.dropdown:hover {
-  opacity: 1;
-}
-
-.dropdown:hover .menu-list {
-  display: block;
 }
