--- a/Lesson12/Task1/style.css
+++ b/Lesson12/Task1/style.css
@@ -1,5 +1,7 @@
-* {
+section {
   margin: 32px;
+}
+html {
   font-family: Roboto, sans-serif;
   font-size: 18px;
 }
@@ -13,7 +15,6 @@ p {
   line-height: 28px;
 }
 .transform {
-  font-weight: 900;
   letter-spacing: 3px;
   font-size: 24px;
   opacity: 0.8;
