--- a/Lesson13/Task1/style.css
+++ b/Lesson13/Task1/style.css
@@ -7,7 +7,7 @@
   font-size: 32px;
   font-weight: 700;
   color: #fff;
-  margin-top: 32px;
+  padding-top: 32px;
   background-size: cover;
   background-repeat: no-repeat;
 }
