--- a/Lesson13/Task1/style.css
+++ b/Lesson13/Task1/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .mountains {
   height: 500px;
   width: 300px;
@@ -10,4 +14,5 @@
   padding-top: 32px;
   background-size: cover;
   background-repeat: no-repeat;
+  bac
 }
