--- a/Lesson13/Task3/style.css
+++ b/Lesson13/Task3/style.css
@@ -1,11 +1,12 @@
-* {
-  margin: 0px;
-}
 .header-text {
+  margin: 0px;
   padding: 16px;
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
   background-image: linear-gradient(45eg, #f00, #ffff00);
   font-size: 96px;
   font-weight: 700px;
+  text-align: center;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
