--- a/Lesson13/Task3/style.css
+++ b/Lesson13/Task3/style.css
@@ -3,7 +3,7 @@
   padding: 16px;
   text-transform: uppercase;
   font-family: Arial, Helvetica, sans-serif;
-  background-image: linear-gradient(45deg, #f00, #ffff00);
+  background-image: linear-gradient(45deg, #ffff00, #f00);
   font-size: 96px;
   font-weight: 700px;
   text-align: center;
