--- a/Lesson14/Task1/style.css
+++ b/Lesson14/Task1/style.css
@@ -1,11 +1,12 @@
 html {
   font-size: 18px;
 }
-
-.properties-list__item {
+.properties-list {
   color: #f39;
   list-style-type: none;
   font-size: 24px;
-  padding: 8px;
   line-height: 32px;
+}
+.properties-list__item {
+  padding: 8px;
 }
