--- a/Lesson21/Task4/style.css
+++ b/Lesson21/Task4/style.css
@@ -1,8 +1,6 @@
-* {
-  box-sizing: border-box;
-}
 html {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  box-sizing: border-box;
+  font-family: Verdana;
   color: #555;
   font-size: 16px;
 }
@@ -12,9 +10,7 @@ html {
   background-image: linear-gradient(45deg, #ff0000, #ffa500);
   color: #fff;
 }
-h1 {
-  margin: 0px;
-}
+
 .body {
   display: flex;
   flex-direction: column;
