--- a/Lesson21/Task4/style.css
+++ b/Lesson21/Task4/style.css
@@ -20,29 +20,34 @@ html {
 .main {
   display: flex;
   width: 100vw;
-  flex-grow: 1;
   font-size: 1.25em;
 }
 
 .navigation {
   display: flex;
+  flex-direction: column;
   width: 20%;
+  padding: 0.5em;
 }
 .nav-list {
   list-style-type: none;
-  line-height: 1.75em;
   padding: 0px;
   width: 100%;
 }
 .nav-list-item {
+  display: flex;
   background-color: #808080;
   height: 2em;
   margin-bottom: 0.5em;
   padding: 0 0.5em;
+  line-height: 1.75em;
 }
 .nav-list-link {
   text-decoration: none;
   color: #fff;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .css-units {
   color: #8b0000;
@@ -54,6 +59,7 @@ html {
   display: flex;
   width: 60%;
   flex-direction: column;
+  padding: 0.5em;
 }
 .section__header {
   display: flex;
@@ -64,6 +70,7 @@ html {
   display: flex;
   width: 20%;
   flex-direction: column;
+  padding: 0.5em;
 }
 .footer {
   display: flex;
