--- a/Lesson21/Task4/style.css
+++ b/Lesson21/Task4/style.css
@@ -37,10 +37,9 @@ html {
 .nav-list-item {
   display: flex;
   background-color: #808080;
-  height: 2em;
+  line-height: 2em;
   margin-bottom: 0.5em;
   padding: 0 0.5em;
-  line-height: 1.75em;
 }
 .nav-list-link {
   text-decoration: none;
@@ -66,6 +65,9 @@ html {
   display: flex;
   justify-content: center;
   font-size: 5vw;
+}
+.units-list-item {
+  line-height: 1.75em;
 }
 .news {
   display: flex;
