--- a/Lesson21/Task4/style.css
+++ b/Lesson21/Task4/style.css
@@ -26,8 +26,8 @@ html {
 }
 
 .navigation {
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
   width: 20%;
   padding: 0.5em;
 }
@@ -57,9 +57,9 @@ html {
   font-weight: 700px;
 }
 .section {
-  display: flex;
+  /* display: flex; */
   width: 60%;
-  flex-direction: column;
+  /* flex-direction: column; */
   padding: 0.5em;
   font-size: 1.25em;
 }
@@ -72,9 +72,9 @@ html {
   line-height: 1.75em;
 }
 .news {
-  display: flex;
+  /* display: flex; */
   width: 20%;
-  flex-direction: column;
+  /* flex-direction: column; */
   padding: 0.5em;
 }
 .footer {
