--- a/Lesson21/Task4/style.css
+++ b/Lesson21/Task4/style.css
@@ -26,7 +26,7 @@ html {
 }
 
 .navigation {
-  /* display: flex; */
+  display: flex;
   /* flex-direction: column; */
   width: 20%;
   padding: 0.5em;
