--- a/Lesson21/Task4/style.css
+++ b/Lesson21/Task4/style.css
@@ -26,8 +26,6 @@ html {
 }
 
 .navigation {
-  display: flex;
-  /* flex-direction: column; */
   width: 20%;
   padding: 0.5em;
 }
@@ -39,13 +37,14 @@ html {
 .nav-list-item {
   display: flex;
   background-color: #808080;
-  line-height: 2em;
   margin-bottom: 0.5em;
-  padding: 0 0.5em;
 }
 .nav-list-link {
+  flex: 1;
   text-decoration: none;
+  padding: 0 0.5em;
   color: #fff;
+  line-height: 2em;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
