--- a/Lesson22/Task1/style.css
+++ b/Lesson22/Task1/style.css
@@ -22,7 +22,7 @@
   }
 }
 
-@media screen and(portrait) {
+@media screen and(orientation:portrait) {
   .container {
     flex-direction: column;
   }
