--- a/Lesson22/Task4/style.css
+++ b/Lesson22/Task4/style.css
@@ -8,7 +8,6 @@ html {
 
 .header {
   display: flex;
-  width: 100vw;
   height: 3em;
   padding: 1em;
   background-color: #eee;
@@ -17,7 +16,7 @@ html {
   display: none;
   font-size: 2em;
   border: 0px solid #fff;
-  background-color: white;
+  background-color: #fff;
   padding: 0px;
   align-items: center;
   cursor: pointer;
@@ -38,14 +37,14 @@ ul.nav-list {
   list-style-type: none;
   padding: 0px;
   margin-bottom: 0.5em;
-  height: 2em;
+  line-height: 2em;
 }
 .nav-list-link {
   flex: 1;
   text-decoration: none;
   color: #fff;
   background-color: #808080;
-  padding: 0.5em;
+  padding: 0 0.5em;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
