--- a/Lesson22/Task5/style.css
+++ b/Lesson22/Task5/style.css
@@ -60,11 +60,9 @@ html {
   padding: 0.5em;
   font-size: 1.25em;
 }
-.images {
-  display: flex;
+
+.section__images {
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-}
-.images__big {
   width: 100%;
 }
 .section__header {
