--- a/Lesson23/Task1/styles.css
+++ b/Lesson23/Task1/styles.css
@@ -28,9 +28,11 @@ html {
   color: #fff;
   cursor: pointer;
 }
+.nav-list__item_selected {
+  background-color: #fb0;
+}
 .nav-list__item:hover {
   opacity: 0.7;
-  background-color: #fb0;
 }
 
 /*# sourceMappingURL=styles.css.map */
