--- a/Lesson23/Task3/styles.css
+++ b/Lesson23/Task3/styles.css
@@ -1,29 +1,19 @@
 .header {
-  display: flex;
   height: 3em;
   background-color: #006400;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 16px;
-}
-
 .menu {
   display: flex;
-  margin: 0px;
   margin-left: 3em;
 }
 .menu__item {
+  position: relative;
+  padding: 0 8px;
   text-transform: uppercase;
   cursor: pointer;
   line-height: 3em;
   color: #fff;
-  list-style-type: none;
 }
 .menu__item-text {
   padding: 8px;
@@ -36,22 +26,39 @@ html {
 }
 .menu__item_active:hover .submenu {
   display: block;
-  background-color: #ff7f50;
 }
 
 .submenu {
+  display: none;
   left: 10px;
-  flex-direction: column;
   cursor: pointer;
-  list-style-type: none;
-  margin: 0px;
-  padding: 0px 8px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   color: #fff;
   min-width: 120px;
   z-index: 1;
+  background-color: #ff7f50;
+}
+.submenu__item {
+  padding: 0px 8px;
 }
 .submenu__item:hover {
   color: #000;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 /*# sourceMappingURL=styles.css.map */
