--- a/Lesson23/Task3/styles.css
+++ b/Lesson23/Task3/styles.css
@@ -1,28 +1,23 @@
 .header {
   height: 3em;
   background-color: #006400;
+  color: #fff;
+  text-transform: uppercase;
 }
 
 .menu {
-  display: flex;
   margin-left: 3em;
+  display: flex;
 }
 .menu__item {
   position: relative;
   padding: 0 8px;
-  text-transform: uppercase;
-  cursor: pointer;
   line-height: 3em;
-  color: #fff;
-}
-.menu__item-text {
-  padding: 8px;
-}
-.menu__item-text:hover {
-  background-color: #9acd32;
+  color: white;
+  list-style-type: none;
 }
 .menu__item_active {
-  color: #ffff00;
+  color: yellow;
 }
 .menu__item_active:hover .submenu {
   display: block;
@@ -30,16 +25,19 @@
 
 .submenu {
   display: none;
-  left: 10px;
-  cursor: pointer;
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   color: #fff;
+  left: 10px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   min-width: 120px;
-  z-index: 1;
   background-color: #ff7f50;
+  z-index: 1;
+}
+.submenu:hover {
+  color: #000;
 }
 .submenu__item {
-  padding: 0px 8px;
+  color: #fff;
+  padding: 0 8px;
 }
 .submenu__item:hover {
   color: #000;
