--- a/Lesson23/Task4/styles.css
+++ b/Lesson23/Task4/styles.css
@@ -2,22 +2,37 @@
   display: flex;
   flex-direction: column;
 }
+@media screen and (min-width: 900px) {
+  .container {
+    flex-direction: row;
+  }
+}
+
 .products {
   display: flex;
   flex-direction: column;
 }
+@media screen and (min-width: 600px) {
+  .products {
+    flex-direction: row;
+    flex: 2;
+  }
+}
+
 .navigation {
   display: flex;
   flex: 1;
   background-color: #ff7f50;
   min-height: 200px;
 }
+
 .products-list {
   display: flex;
   flex: 1;
   background-color: #006400;
   min-height: 200px;
 }
+
 .news {
   display: flex;
   flex: 1;
@@ -25,17 +40,14 @@
   min-height: 200px;
 }
 
-@media screen and (min-width: 600px) {
-  .products {
-    flex-direction: row;
-    flex: 2;
-  }
+* {
+  box-sizing: border-box;
 }
-@media screen and (min-width: 900px) {
-  .container {
-    flex-direction: row;
-  }
+
+html {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 span {
   font-family: Verdana;
   margin: auto;
@@ -44,3 +56,5 @@ span {
   background-color: #faebd7;
   text-transform: lowercase;
 }
+
+/*# sourceMappingURL=styles.css.map */
