--- a/Lesson24/Task1/styles/order.scss
+++ b/Lesson24/Task1/styles/order.scss
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: auto 15px;
+  padding: auto 15px;
+  background: #f4f5f7;
   @include for-device-large {
     flex-direction: row;
     margin: 70px 224px;
