--- a/Lesson24/Task1/styles/headline.scss
+++ b/Lesson24/Task1/styles/headline.scss
@@ -27,9 +27,9 @@
     @include for-device-large {
       position: absolute;
       height: 165px;
-      left: 9.3%;
-      right: 37.14%;
-      top: 24%;
+      width: 754px;
+      left: 126px;
+      top: 188px;
 
       font-weight: bold;
       font-size: 80px;
