--- a/Lesson24/Task1/styles/about.scss
+++ b/Lesson24/Task1/styles/about.scss
@@ -3,11 +3,15 @@
 .about {
   display: flex;
   background-color: #f4f5f7;
+  @include for-device-large {
+  }
 }
 .article {
   margin: 46px 15px 0px 15px;
   @include for-device-large {
     display: flex;
+    flex-grow: 1;
+    justify-content: center;
     margin: 62px 115px;
   }
 
