--- a/Lesson24/Task1/styles/order.scss
+++ b/Lesson24/Task1/styles/order.scss
@@ -8,12 +8,14 @@
   background: #f4f5f7;
   @include for-device-large {
     flex-direction: row;
-    margin: 70px 224px;
+    padding: 70px 224px;
   }
   &__image {
     width: 200px;
     margin: 40px 60px;
     @include for-device-large {
+      display: flex;
+      justify-content: center;
       margin: 0px;
       width: 100%;
     }
@@ -23,6 +25,7 @@
     flex-direction: column;
     align-items: center;
     @include for-device-large {
+      flex-grow: 1;
       align-items: flex-start;
     }
 
@@ -43,6 +46,7 @@
       margin: 22px 15px;
       @include for-device-large {
         margin: 22px 0px;
+        width: 555px;
       }
     }
     &_cta {
@@ -57,12 +61,13 @@
         width: 290px;
         height: 48px;
         margin: 18px 15px 12px;
+
         @include for-device-large {
           flex-direction: row;
           height: 48px;
           width: 385px;
           border-radius: 2px;
-          margin: 0px;
+          margin: auto 10px;
         }
       }
     }
